fix: set el-table to static position to resolve image preview z-index

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -2,6 +2,10 @@ body {
   margin: 0;
 }
 
-.el-image-viewer__wrapper {
+.el-table {
+  position: static !important;
+}
+
+.el-overlay {
   z-index: 99999 !important;
 }
